--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jquery": "^3.5.1",
     "JSON": "^1.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sqlite3": "^5.0.0",
     "url": "^0.11.0",
+    "web-push": "^3.4.4",
     "ws": "^7.3.1"
   }
 }
